--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLxL3XwBY2xNp6etzf5D30WyXiWZQmHCnJU8IgpSc24FJ4jzPu" hight="100" width="1000"></img>
 <fieldset><legend>Portal</legend>
-<form action="\Users\isha\Desktop\hackathon\page2.html">
+<form action="page2.html">
 <table cellspacing="10">
 <tr>
 <th>USERNAME</th>
